kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: urlshortener
  labels:
    app.kubernetes.io/name: urlshortener
