kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener-ingress
  namespace: urlshortener
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: urlshortener.local
      http:
        paths:
          - path: /go(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: go-service
                port:
                  number: 8000

          - path: /node(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: node-service
                port:
                  number: 3000

          - path: /python(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: python-service
                port:
                  number: 5000
